styles/php-debug.atom-text-editor.less
@import "ui-variables";

// .editor.editor-colors .gutter .line-number {
//   &.php-debug-breakpoint {
//     color: #fff;
//     background-color: #0F0;
//   }
// }

.gutter .line-numbers .php-debug-breakpoint {
    color: #fff;
    background-color: #0F0;
}

.debug-break {

  background-color: fade(@background-color-success,25%);

}

